# Media-Cognition-Pipeline

./: .gitmodules  CMakeLists.txt  README.md  README_CN.md  README_EN.md
Cognition/Detection/: DataChannel.h  DetectionInfo.h  NodeFlow.cpp  NodeFlow.h  TrackerNode.cpp  TrackerNode.h  YoloDetectionNode.cpp  YoloDetectionNode.h
HardCodec/: DecEncInterface.h
HardCodec/DVPP_utils/: dvpp_common.cpp  dvpp_common.h
HardCodec/Decoder/: AACDecoder.cpp  DVPPDecoder.cpp  FFHardDecoder.cpp  FFSoftDecoder.cpp  HardDecoder.cpp  HardDecoder.h  JetsonDecoder.cpp  NVIDIADecoder.cpp  SoftDecoder.cpp
HardCodec/Encoder/: AACEncoder.cpp  H264DVPPEncoder.cpp  H264HardEncoder.cpp  H264HardEncoder.h  H264JetsonEncoder.cpp  H264NVIDIAEncoder.cpp  H264SoftEncoder.cpp
Media/MediaMuxer/: MediaMuxer.cpp
Media/MediaReader/RtspReader/: rtsp_client_proxy.cpp  rtsp_client_proxy.h
Test/: main.cpp
Warpper/: MediaWrapper.cpp  MediaWrapper.h
